# qdpxx

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  FindQDPXX.cmake.in  INSTALL  INSTALL_EXAMPLES  Makefile  Makefile.am  Makefile.cfg  Makefile.in  NEWS  QDPOperators.h  QDPOps.in  QDPXXConfig.cmake.in  README  README.markdown  acinclude.m4  aclocal.m4  configure  configure.ac  defs.h  foo.cc  forward.h  globalfuncs.h  index.html  inner.h  io.cc  io.h  iogauge.cc  layout.cc  layout.h  newops.h  outer.h  outersubtype.h  params.h  params.json  parscalar_specific.cc  parscalar_specific.h  (+31 more)
examples/: CMakeLists.txt  Makefile.am  Makefile.in  baryon_w.cc  blas1.cc  blas1.h  cblas1.cc  cblas1.h  dslashm_w.cc  examples.h  expm12.cc  formfac_w.cc  geom.cc  geom.h  jlab_sse.h  junk.cc  lhpc2ildg.cc  linalg.h  linalg1.cc  mesons_w.cc  mesplq.cc  nersc2ildg.cc  nersc2ildg.xml  polylp.cc  reunit.cc  rgauge.cc  t_aff.cc  t_basic.cc  t_binx.cc  t_blas.cc  t_blas_g5.cc  t_blas_g5_2.cc  t_blas_g5_3.cc  t_cblas.cc  t_clov_force.cc  t_cugauge.cc  t_db.cc  t_dslash5.cc  t_dslashm.cc  t_dslashm.intel-scalar.nml  (+48 more)
include/: CMakeLists.txt  Makefile.am  Makefile.in  QDPOperators.h  defs.h  forward.h  globalfuncs.h  io.h  layout.h  map.h  mic_specific.h  multi.h  newops.h  outer.h  outersubtype.h  params.h  parscalar_specific.h  primcolormat.h  primcolorvec.h  primgamma.h  primitive.h  primmatrix.h  primscalar.h  primseed.h  primspinmat.h  primspinvec.h  primvector.h  proto.h  qdp.h  qdp_aff_imp.h  qdp_aff_io.h  qdp_allocator.h  qdp_arrays.h  qdp_binx.h  qdp_byteorder.h  qdp_cache.h  qdp_cachelock.h  qdp_cachelock_peteops.h  qdp_cachelock_qdpops.h  qdp_config.h  (+137 more)
include/PETE/: Combiners.h  CreateLeaf.h  ForEach.h  ForEachIn.h  ForEachInOrder.h  ForEachTypeParser.h  Functors.h  Makefile.in  OperatorTags.h  PETE.h  Scalar.h  TreeNodes.h
include/mic_specific/: mic_LatMatMult.h  mic_MatMult.h
include/scalarsite_bagel_qdp/: qdp_scalarsite_bagel_qdp_blas.h  qdp_scalarsite_bagel_qdp_blas_g5.h  qdp_scalarsite_bagel_qdp_linalg.h
include/scalarsite_generic/: generic_adj_mat_vec.h  generic_blas_g5.h  generic_blas_local_sumsq.h  generic_blas_local_vcdot.h  generic_blas_local_vcdot_real.h  generic_blas_vadd.h  generic_blas_vadd3_g5.h  generic_blas_vaxmby3.h  generic_blas_vaxmby3_norm.h  generic_blas_vaxmy3.h  generic_blas_vaxpby3.h  generic_blas_vaxpby3_g5.h  generic_blas_vaxpy3.h  generic_blas_vaxpy3_g5.h  generic_blas_vaxpy3_norm.h  generic_blas_vaypx3_g5.h  generic_blas_vcaxmby3.h  generic_blas_vcaxmy3.h  generic_blas_vcaxpby3.h  generic_blas_vcaxpy3.h  generic_blas_vcscal.h  generic_blas_vscal.h  generic_blas_vscal_g5.h  generic_blas_vsub.h  generic_fused_spin_proj.h  generic_fused_spin_recon.h  generic_mat_vec.h  generic_mult_aa.h  generic_mult_an.h  generic_mult_na.h  generic_mult_nn.h  generic_mv_switchbox.h  generic_spin_aggregate.h  generic_spin_proj.h  generic_spin_proj_inlines.h  generic_spin_recon.h  generic_spin_recon_inlines.h  qdp_generic_fused_spin_proj.h  qdp_generic_fused_spin_proj_evaluates.h  qdp_generic_fused_spin_proj_evaluates_wrapper.h  (+14 more)
include/scalarsite_qcdoc/: qcdoc_mult_an.h  qcdoc_mult_nn.h  qdp_scalarsite_qcdoc_blas.h  qdp_scalarsite_qcdoc_linalg.h  save_fp_regs.h
include/scalarsite_sse/: qdp_scalarsite_sse_blas.h  qdp_scalarsite_sse_blas_dble.h  qdp_scalarsite_sse_blas_double.h  qdp_scalarsite_sse_blas_double_wrapper.h  qdp_scalarsite_sse_blas_g5.h  qdp_scalarsite_sse_blas_g5_includes.h  qdp_scalarsite_sse_blas_wrapper.h  qdp_scalarsite_sse_linalg.h  qdp_scalarsite_sse_linalg_double.h  qdp_scalarsite_sse_vector.h  qdp_sse_fused_spin_proj_evaluates.h  qdp_sse_fused_spin_proj_evaluates_wrapper.h  qdp_sse_fused_spin_recon_evaluates.h  qdp_sse_fused_spin_recon_evaluates_wrapper.h  qdp_sse_spin_evaluates.h  qdp_sse_spin_evaluates_wrapper.h  sse_addvec.h  sse_adj_mat_hwvec.h  sse_adj_mat_vec.h  sse_blas_local_sumsq_double.h  sse_blas_local_vcdot_double.h  sse_blas_local_vcdot_real_double.h  sse_blas_vadd3_g5.h  sse_blas_vaxmbyz4_double.h  sse_blas_vaxmyz4_double.h  sse_blas_vaxpby3_g5.h  sse_blas_vaxpbyz4_double.h  sse_blas_vaxpy3_g5.h  sse_blas_vaxpy4_double.h  sse_blas_vaypx3_g5.h  sse_blas_vaypx4_double.h  sse_blas_vscal3_g5.h  sse_blas_vscal4_double.h  sse_dcomplex_mult_macros.h  sse_fused_spin_proj.h  sse_fused_spin_recon.h  sse_linalg_mm_su3_double.h  sse_mat_hwvec.h  sse_mat_vec.h  sse_mult_an.h  (+11 more)
include/scalarvecsite_sse/: qdp_scalarvecsite_sse_blas.h  qdp_scalarvecsite_sse_linalg.h
lib/: CMakeLists.txt  Makefile.am  Makefile.in  byteorder.cc  foo.cc  io.cc  iogauge.cc  layout.cc  map.cc  parscalar_init.cc  parscalar_layout.cc  parscalar_specific.cc  qdp.cc  qdp_aff_imp.cc  qdp_aff_io.cc  qdp_bgq_threadbind.cc  qdp_binx.cc  qdp_byteorder.cc  qdp_cache.cc  qdp_crc32.cc  qdp_cuda.cu  qdp_cuda_allocator.cc  qdp_default_allocator.cc  qdp_deviceparams.cc  qdp_filebuf.cc  qdp_generic_threadbind.cc  qdp_hdf5.cc  qdp_io.cc  qdp_io_reader.cc  qdp_io_thread.cc  qdp_io_writer.cc  qdp_iogauge.cc  qdp_jit.cc  qdp_jitargs.cc  qdp_layout.cc  qdp_map.cc  qdp_map_obj_disk.cc  qdp_mapresource.cc  qdp_mastermap.cc  qdp_parscalar_global_sum.cc  (+46 more)
lib/mic_specific/: mic_MatMult.cc
lib/scalarsite_sse/: qdp_scalarsite_linalg_double.cc  qdp_scalarsite_sse.cc  sse_blas_local_sumsq_double.cc  (+14 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.in  testCMulDouble.cc  testCMulDouble.h  testLocalSumSqDouble.cc  testLocalVcdotDouble.cc  testLocalVcdotRealDouble.cc  testMatEqHermHermDouble.cc  testMatEqHermMatDouble.cc  testMatEqMatHermDouble.cc  testMatEqMatMatDouble.cc  testMatEqMatMatDouble.h  testMatPeqMatDouble.cc  testMatScalMultDouble.cc  testVScalDouble.cc  testVaxmyDouble.cc  testVaxmyDouble.h  testVaxpbyDouble.cc  testVaxpbyDouble.h  testVaxpyDouble.cc  testVaypxDouble.cc  test_cmul.cc  test_matmat_double.cc  test_vaxpy_double.cc  testvol.h  timeMatEqHermHermDouble.cc  timeMatEqHermMatDouble.cc  timeMatEqMatHermDouble.cc  timeMatEqMatMatDouble.cc  timeMatEqMatMatDouble.h  timeVaxpby.cc  timeVaxpyDouble.cc  timeVaxpyDouble.h  time_matmat_double.cc  time_vaxpy_double.cc  unittest.h
(+66 files in other folders)
